use variable username for include / library path

--- a/LitScene/LitScene.vcxproj
+++ b/LitScene/LitScene.vcxproj
@@ -71,8 +71,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Program Files %28x86%29\3Dconnexion\3DxWare SDK\Inc;C:\Users\Josiah\OneDrive\cpp\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Program Files %28x86%29\3Dconnexion\3DxWare SDK\Lib\x86;C:\Users\Josiah\OneDrive\cpp\lib\debug;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Program Files %28x86%29\3Dconnexion\3DxWare SDK\Inc;C:\Users\$(UserName)\OneDrive\cpp\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Program Files %28x86%29\3Dconnexion\3DxWare SDK\Lib\x86;C:\Users\$(UserName)\OneDrive\cpp\lib\debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
