--- a/LitScene/LitScene.vcxproj.filters
+++ b/LitScene/LitScene.vcxproj.filters
@@ -52,5 +52,8 @@
     <None Include="..\shaders\raytrace_render.frag">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="..\shaders\pathtrace.comp">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
